syntax = "proto3";

// ====================================
//               ENUMS
// ====================================
enum ApprovalStatus {
    APPROVED = 1;
    CERTIFICATE_INVALID = 2;
    CLIENT_NOT_AVAIBLE = 3;
}

// ====================================
//              MESSAGES
// ====================================
// Simulates an empty message because protobuffer doesn't support void
message EmptyMessage {}


// Basic communication
message PublicKey {
    string publicKey = 1;
}

message ConnectionRequest {
    string encryptedCertificate = 1;
    string requestType = 2;
    string TTL = 3;
    string address = 4; // no need for encryption because of traffic sniffing will show destination anyway
}

message ConnectionApproval {
    optional ApprovalStatus approvalStatus = 1;
    optional string encryptedJwtToken = 2;
}

// ====================================
//    Communication between clients
// ====================================
message DataWrapper { // can we make it for response also to authenticate client B response??
    optional bytes payload = 1;
}

// ====================================
//              Services
// ====================================
service CentralSystem {
    rpc getPublicKey(EmptyMessage) returns (PublicKey) {}
    rpc requestConnection(ConnectionRequest) returns (ConnectionApproval) {}
}

// Implementation of Client's Listener. 
// Allows CentralSystem or other Wrapper to request data.
service ClientService {
    // central system <-> client
    rpc sendConnectionData(ConnectionApproval) returns(EmptyMessage) {}

    // client <-> client
    rpc sendPayload(DataWrapper) returns (DataWrapper) {}
}